fixed page na merong gap sa taas sa ibang paper

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -147,6 +147,7 @@
 .go-to-files-btn button, 
 .update-prof-btn button,
 .add-file-btn button,
+.print-btn-cont button,
 .yes-btn {
     font-size: medium;
     background-color: var(--light-green);
