--- a/public/css/app.css
+++ b/public/css/app.css
@@ -936,6 +936,9 @@ select {
 .text-wrap {
   text-wrap: wrap;
 }
+.break-all {
+  word-break: break-all;
+}
 .rounded {
   border-radius: 0.25rem;
 }
