--- a/public/css/print.css
+++ b/public/css/print.css
@@ -6,8 +6,9 @@
 
 @media print {
     @page {
-        size: letter;
+        /* size: legal; */
         margin: .5in;
+        /* margin: 0; */
     }
 }
 
